--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,30 +1,10 @@
-body {
-    margin:0;
-    height: 100vh;
-    width: 100vw;
-    overflow: hidden;
-    
-    display:flex;
-    flex-direction:column;
-    align-items:center;
+body{
+    font-size : 0px ;
 }
 
-div.row {
-    display:flex;
-    flex-direction:row;
-    align-items:center;
-    justify-content:center;
-    width:100%;
-}
-
-div.cell_default {
-    background: url("../images/pin_gris.svg") no-repeat center;
-}
-
-div.cell_selected {
-    background: url("../images/pin_bleu.svg") no-repeat center;
-}
-
-div.cell_unselected {
-    background: url("../images/pin_grisclair.svg") no-repeat center;
+.baseplate {
+    position: fixed ;
+    top : 50% ;
+    left : 50% ;
+    transform: translate3d(-50%, -50%, 0);
 }
